Added application on Git Pages

--- a/src/components/feeds/Feeds.css
+++ b/src/components/feeds/Feeds.css
@@ -1,7 +1,14 @@
 .feedsContainer{
-    flex: 5.5
+    flex: 5.5;
+    height: 100vh;
+    overflow-y: scroll
+}
+
+::-webkit-scrollbar{
+    display: none;
 }
 
 .feedsWrapper{
     padding: 1.5rem;
 }
+
