--- a/src/components/share/Share.css
+++ b/src/components/share/Share.css
@@ -1,5 +1,6 @@
 .shareContainer{
-    width: 100%;
+    width: 570px;
+    max-width: 100%;
     height: 7rem;
     border-radius: 10px;
     box-shadow: rgb(0 0 0 / 75%) 0px 0px 12px -3px;
