--- a/src/components/userProfile/userProfile.css
+++ b/src/components/userProfile/userProfile.css
@@ -9,7 +9,7 @@
 .profileTop{
     display: block;
     position: relative;
-    height: 385px;
+    height: 415px;
 }
 .profileCoverImage{
     max-width: 100%;
@@ -39,6 +39,11 @@
     box-shadow: rgb(0 0 0 / 75%) 0px 0px 14px 1px;
 }
 
+.profileUserDetails{
+    margin-top: 0;
+    padding: 0;
+}
+
 .profileName{
     text-align: center;
     font-size: 2rem;
@@ -46,6 +51,8 @@
     padding-bottom: 0;
     font-weight: 600;
     margin-bottom: 0;
+    margin-top: 0;
+    padding: 0;
 }
 
 .profileDetails{
@@ -53,4 +60,13 @@
     text-align: center;
     font-size: 1rem;
 
+}
+
+.profileCenter{
+    display: flex;
+}
+.feed{
+    display: flex;
+    align-items: center;
+    padding: 1rem;
 }
