--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -2,6 +2,8 @@
     flex: 2.5;
     height: calc(100vh - 2.5rem);
     overflow-y: scroll;
+    position: sticky;
+    top: 3rem
 }
 
 ::-webkit-scrollbar{
