--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,20 +1,23 @@
-.loginPage{
+.loginPage {
     width: 100vw;
     height: 100vh;
+    min-width: 100vw;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: rgb(243, 243, 243);
 }
 
-.loginContainer{
-    width: 70%;
+.loginContainer {
+    width: 950px;
     height: 100vh;
     display: flex;
+    align-items: center;
 }
 
-.loginConatainerLeft{
-    width: 50%;
-    background-color: green;
+.loginConatainerLeft {
+    width: 570px;
     display: flex;
     flex-direction: column;
     /* align-items: center; */
@@ -22,40 +25,154 @@
     padding-left: 6rem;
 }
 
-.loginContainerRight{
-    width: 50%;
-    background-color: red;
+.loginContainerRight {
+    width: 380px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.leftLogo{
+.leftLogo {
     font-size: 3rem;
     font-weight: 600;
+    color: #a5773e;
 }
 
-.leftLogoMessage{
+.leftLogoMessage {
     font-size: 1.5rem;
     font-weight: 300;
 }
-.loginContainerRight{
+
+.loginContainerRight {
     padding: 2rem;
+    justify-content: center;
 }
 
-.loginCard{
+.loginCard {
     padding: 2rem;
-    background-color: yellow;
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.75);
+    background-color: white;
 }
 
-.loginInput{
+.loginInput {
+    width: 250px;
+    height: 3rem;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    border: 1px solid black;
+    cursor: text;
+
+}
+
+.loginInput:focus {
+    border: 2px solid #a5773e;
+}
+
+.loginBtn {
+    padding: 0.5rem 1rem;
+    border-radius: 10px;
+    background-color: #D19A55;
+    color: white;
+    font-weight: 500;
+    width: 250px;
+    border: none;
+    cursor: pointer;
+    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.75);
+}
+
+.loginForgotPassLink {
+    color: #D19A55;
+    padding: 1rem;
+    cursor: pointer;
+
+}
+
+.loginHr {
     width: 100%;
-
 }
 
+.loginBtnCreateUser {
+    padding: 0.5rem 1rem;
+    margin: 1rem 1rem;
+    border-radius: 10px;
+    background-color: #42B72A;
+    color: white;
+    font-weight: 500;
+    width: 60%;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 0;
+}
+
+
+@media (max-width: 580px) {
+    .loginContainer {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    .loginConatainerLeft {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 1rem;
+    }
+    .loginContainerRight{
+        padding: 0;
+    }
+}
+
+@media (max-width: 380px) {
+    .loginInput {
+        width: 120px;
+    }
+    .loginBtnCreateUser {
+        width: 120px;
+    }
+    .loginBtn {
+        width: 120px;
+    }
+    .leftLogo {
+        text-align: center;
+    }
+    
+    .leftLogoMessage {
+        text-align: center;
+    }
+}
+
+@media (max-width: 1000px) {
+    .loginContainer {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    .loginConatainerLeft {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 1rem;
+    }
+    .loginContainerRight{
+        padding: 0;
+    }
+
+}
